--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
     </div>
 
     <div class="imagem">
-        <img src="/img/imagem_pokemon.jpg.jpg" alt="Pokémon">
+        <img src="/img/imagem_pokemon.png" alt="Pokémon">
     </div>
 </body>
 </html>
