--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -5,22 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Links -->
-    <link rel="icon" href="./fivicon/favicon-16x16.png">
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="icon" href="/fivicon/favicon-16x16.png">
+    <link rel="stylesheet" href="/css/pokedex.css">
     
     <!-- Main JS -->
-    <script defer src="./js/pokedex_script.js"></script>
+    <script defer src="/js/pokedex_script.js"></script>
     <title>Pokedex</title>
 </head>
 
 <body>
-
     <!-- Container escalável -->
     <div class="escala-container">
         <main>
-            <img src="./img/bola_azul.png" alt="Bola Azul" class="bola_azul">
+            <img src="/img/bola_azul.png" alt="Bola Azul" class="bola_azul">
             <img src="#" alt="pokemon" class="pokemon_image">
-            <img src="./img/pokedex_sem_fundo.png" alt="pokedex" class="pokedex">
+            <img src="/img/pokedex_sem_fundo.png" alt="pokedex" class="pokedex">
 
             <h1 class="pokemon_data">
                 <span class="pokemon_number"></span> 
@@ -47,12 +46,12 @@
     </div>
 
     <!-- Áudio da troca de Pokémon -->
-    <audio id="changeSound" src="./music/pib.mp3" preload="auto"></audio>
+    <audio id="changeSound" src="/music/pib.mp3" preload="auto"></audio>
 
     <!-- Música de fundo -->
     <audio id="bgMusic" loop>
-        <source src="./music/background.mp3.mp3" type="audio/mpeg">
-        <source src="./music/background.mp3.mp3.ogg" type="audio/ogg">
+        <source src="/music/background.mp3.mp3" type="audio/mpeg">
+        <source src="/music/background.mp3.mp3.ogg" type="audio/ogg">
     </audio>
 </body>
 </html
