--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -6,7 +6,7 @@
     
     <!-- Links -->
     <link rel="icon" href="/fivicon/favicon-16x16.png">
-    <link rel="stylesheet" href="css/pokedex.css">
+    <link rel="stylesheet" href="/css/pokedex.css">
     
     <!-- Main JS -->
     <script defer src="/js/pokedex_script.js"></script>
