--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
         <ul class="menu-itens">
             <!-- Item 1 -->
             <li class="menu-item">
-                <a href="html/pokedex.html" class="menu-link">
+                <a href="pokedex.html" class="menu-link">
                     <i class="fas fa-search icon"></i>
                     <span class="menu-texto">Pokédex</span>
                 </a>
