--- a/pokedex.html
+++ b/pokedex.html
@@ -48,13 +48,10 @@
 
                 <!-- Dados do Pokémon -->
                 <h1 class="pokemon_data">
-                <span class="pokemon_number"></span> 
-                <span class="pokemon_name"></span> 
+                    <span class="pokemon_number"></span> 
+                    <span class="pokemon_name"></span> 
+                    <span class="pokemon_desc"></span>        
                 </h1>
-
-                <!-- Caixinha de descrição independente -->
-                <div class="pokemon_desc"></div>
-
 
                 <!-- Tipo do Pokémon -->
                 <h2 class="pokemon_tipo_posicao">
