--- a/index.html
+++ b/index.html
@@ -87,8 +87,17 @@
         <div class="imagem-destaque">
             <img src="img/imagem_pokemon.jpg" alt="Pokémon">
         </div>
+        <!--Nova div para a mensagem de boas-vindas-->
+        <div class="mensagem-boas-vinda">
+            <h1>Bem-vindo, Treinador Pokémon!</h1>
+            <p>Prepare-se para explorar o mundo dos Pokémons e capturar todos!</p>
+        </div>
     </main>
 
     <script src="js/index.js"></script>
+    <script src="js/audioControle.js"></script>
+    <audio id="musicaFundo">
+        <source src="music/musica_fundo.mp3" type="audio/mpeg">
+    </audio>
 </body>
 </html>
