--- a/pokedex.html
+++ b/pokedex.html
@@ -24,7 +24,7 @@
             <img src="img/pokemon_logo.png" alt="Logo Pokémon" class="logo-img">
         </div>
         <ul class="menu-itens">
-            <li class="menu-item"><a href="index.htm" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
+            <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
             <li class="menu-item"><a href="pokemon.html" class="menu-link"><i class="fas fa-paw icon"></i><span class="menu-texto">Pokémons</span></a></li>
             <li class="menu-item"><a href="tipos.html" class="menu-link"><i class="fas fa-fire icon"></i><span class="menu-texto">Tipos</span></a></li>
             <li class="menu-item"><a href="habilidades.html" class="menu-link"><i class="fas fa-star icon"></i><span class="menu-texto">Habilidades</span></a></li>
