--- a/pokedex.html
+++ b/pokedex.html
@@ -25,7 +25,7 @@
         </div>
         <ul class="menu-itens">
             <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
-            <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fas fa-paw icon"></i><span class="menu-texto">Pokémons</span></a></li>
+            <li class="menu-item"><a href="pokemon.html" class="menu-link"><i class="fas fa-paw icon"></i><span class="menu-texto">Pokémons</span></a></li>
             <li class="menu-item"><a href="tipos.html" class="menu-link"><i class="fas fa-fire icon"></i><span class="menu-texto">Tipos</span></a></li>
             <li class="menu-item"><a href="habilidades.html" class="menu-link"><i class="fas fa-star icon"></i><span class="menu-texto">Habilidades</span></a></li>
             <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
@@ -48,13 +48,10 @@
 
                 <!-- Dados do Pokémon -->
                 <h1 class="pokemon_data">
-                <span class="pokemon_number"></span> 
-                <span class="pokemon_name"></span> 
+                    <span class="pokemon_number"></span> 
+                    <span class="pokemon_name"></span> 
+                    <span class="pokemon_desc"></span>        
                 </h1>
-
-                <!-- Caixinha de descrição independente -->
-                <div class="pokemon_desc"></div>
-
 
                 <!-- Tipo do Pokémon -->
                 <h2 class="pokemon_tipo_posicao">
