--- a/curiosidades.html
+++ b/curiosidades.html
@@ -47,7 +47,7 @@
         </ul>
     </div>
     <div class="pikachu">
-        <img src="img/pikachu.jpg" width="400" alt="pikachu">
+        <img src="img/pikachu.png" width="400" alt="pikachu">
 
         <ul>
             <li>Mascote oficial da franquia: Pikachu é o rosto oficial do mundo Pokémon e um dos personagens mais
