--- a/tms.html
+++ b/tms.html
@@ -17,7 +17,7 @@
         <ul class="menu-itens">
             <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
             <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search icon"></i><span class="menu-texto">Pokédex</span></a></li>
-            <li class="menu-item"><a href="tipos.html" class="menu-link"><i class="fas fa-fire icon"></i><span class="menu-texto">Tipos</span></a></li>
+            <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question icon"></i><span class="menu-texto">Curiosidades</span></a></li>
             <li class="menu-item"><a href="habilidades.html" class="menu-link"><i class="fas fa-star icon"></i><span class="menu-texto">Habilidades</span></a></li>
             <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
             <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
