--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Menu Lateral -->
     <nav class="menu-lateral">
         <div class="logo">
-            <img src="img/pokemon_logo.png" alt="Logo Pokémon" class="logo-img">
+            <img src="img/pokemon_logo.png" alt="Logo Pokémon"class="logo-img">
         </div>
         
         <ul class="menu-itens">
@@ -30,7 +30,7 @@
             <!-- Item 3 -->
             <li class="menu-item">
                 <a href="curiosidades.html" class="menu-link">
-                    <i class="fas fa-question icon"></i>
+                    <i class="fas fa-question fa-2x icon"></i>
                     <span class="menu-texto">Curiosidades</span>
                 </a>
             </li>
@@ -38,8 +38,8 @@
             <!-- Item 4 -->
             <li class="menu-item">
                 <a href="habilidades.html" class="menu-link">
-                    <i class="fas fa-star icon"></i>
-                    <span class="menu-texto">Habilidades</span>
+                    <i class="fas fa fa-film fa-4x icon"></i>
+                    <span class="menu-texto">Cenas</span>
                 </a>
             </li>
             
