--- a/pokedex.html
+++ b/pokedex.html
@@ -25,8 +25,8 @@
         </div>
         <ul class="menu-itens">
             <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
-            <li class="menu-item"><a href="pokemon.html" class="menu-link"><i class="fas fa-paw icon"></i><span class="menu-texto">Pokémons</span></a></li>
-            <li class="menu-item"><a href="tipos.html" class="menu-link"><i class="fas fa-fire icon"></i><span class="menu-texto">Tipos</span></a></li>
+            <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fas fa-circle icon"></i><span class="menu-texto">TMS</span></a></li>
+            <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question icon"></i><span class="menu-texto">Curiosidades</span></a></li>
             <li class="menu-item"><a href="habilidades.html" class="menu-link"><i class="fas fa-star icon"></i><span class="menu-texto">Habilidades</span></a></li>
             <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
             <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
