--- a/cenas.html
+++ b/cenas.html
@@ -7,25 +7,27 @@
     <title>Cenas</title>
     <!-- Inclua o Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/cenas.css">
 </head>
 <body>
-<!-- Menu Lateral -->
-    <nav class="menu-lateral">
-        <div class="logo">
-            <img src="img/pokemon_logo.png" alt="Logo Pokémon" class="logo-img">
-        </div>
-        <ul class="menu-itens">
-            <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
-            <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search icon"></i><span class="menu-texto">Pokédex</span></a></li>
-            <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fas fa-circle icon"></i><span class="menu-texto">TMS</span></a></li>
-            <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question icon"></i><span class="menu-texto">Curiosidades</span></a></li>
-            <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
-            <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
-            <li class="menu-item"><a href="mapa.html" class="menu-link"><i class="fas fa-map-marked-alt icon"></i><span class="menu-texto">Mapa</span></a></li>
-            <li class="menu-item"><a href="configuracoes.html" class="menu-link"><i class="fas fa-cog icon"></i><span class="menu-texto">Configurações</span></a></li>
-        </ul>
-    </nav>
+  <!-- Menu Lateral -->
+  <nav class="menu-lateral">
+    <div class="logo">
+      <img src="img/pokemon_logo.png" alt="Logo Pokémon" class="logo-img">
+    </div>
+    <ul class="menu-itens">
+
+      <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
+      <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search icon"></i><span class="menu-texto">Pokédex</span></a></li>
+      <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc icon"></i><span class="menu-texto">TMS</span></a></li>
+      <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question-circle fa-5x icon"></i><span class="menu-texto">Curiosidades</span></a></li>
+      <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
+      <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
+      <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt icon"></i><span class="menu-texto">Mapas</span></a></li>
+      <li class="menu-item"><a href="configuracoes.html" class="menu-link"><i class="fas fa-cog icon"></i><span class="menu-texto">Configurações</span></a></li>
+    
+    </ul>
+  </nav>
      <!-- Conteúdo Principal -->
     <div class="conteudo-principal">
         <h1>Cenas</h1>
@@ -62,7 +64,8 @@
         </div>
 
     </div>
-
+ 
+    <script src="js/index.js"></script>
     
 </body>
 </html>
