--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="mensagem-boas-vinda">
             <h1>Bem-vindo, Treinador Pokémon!</h1>
             <p>Prepare-se para explorar o mundo dos Pokémons e capturar todos!</p>
+             <a href="loguin.html" class="botao-loguin">Fazer Login</a>
         </div>
     </main>
 
