--- a/curiosidades.html
+++ b/curiosidades.html
@@ -19,7 +19,7 @@
       <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
       <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search icon"></i><span class="menu-texto">Pokédex</span></a></li>
       <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc icon"></i><span class="menu-texto">TMS</span></a></li>
-      <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
+      <li class="menu-item"><a href="cenas.html" class="menu-link"><i class="fa fa-film fa-4x icon"></i><span class="menu-texto">Cenas</span></a></li>
       <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
       <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt icon"></i><span class="menu-texto">Mapas</span></a></li>
       <li class="menu-item"><a href="configuracoes.html" class="menu-link"><i class="fas fa-cog icon"></i><span class="menu-texto">Configurações</span></a></li>
