--- a/pokedex.html
+++ b/pokedex.html
@@ -27,7 +27,7 @@
             <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
             <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc icon"></i><span class="menu-texto">TMS</span></a></li>
             <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question-circle icon"></i><span class="menu-texto">Curiosidades</span></a></li>
-            <li class="menu-item"><a href="habilidades.html" class="menu-link"><i class="fas fa-star icon"></i><span class="menu-texto">Habilidades</span></a></li>
+            <li class="menu-item"><a href="cenas.html" class="menu-link"><i class="fa fa-film fa-2x icon"></i><span class="menu-texto">Cenas</span></a></li>
             <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
             <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
             <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt icon"></i><span class="menu-texto">Mapa</span></a></li>
