--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Menu Lateral -->
   <nav class="menu-lateral">
     <div class="logo">
-      <img src="img/pokemon_logo.png" alt="Logo Pokémon" class="logo-img">
+      <img src="/img/pokemon_logo.png" alt="Logo Pokémon" class="logo-img">
     </div>
     <ul class="menu-itens">
       
@@ -25,7 +25,7 @@
       <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question-circle fa-5x icon"></i><span class="menu-texto">Curiosidades</span></a></li>
       <li class="menu-item"><a href="cenas.html" class="menu-link"><i class="fa fa-film fa-4x icon"></i><span class="menu-texto">Cenas</span></a></li>
       <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
-      <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
+      <li class="menu-item"><a href="/GBA-wasm-master/docs/gba.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">GBA</span></a></li>
       <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt icon"></i><span class="menu-texto">Mapas</span></a></li>
       <li class="menu-item"><a href="configuracoes.html" class="menu-link"><i class="fas fa-cog icon"></i><span class="menu-texto">Configurações</span></a></li>
     
