--- a/cenas.html
+++ b/cenas.html
@@ -16,15 +16,14 @@
       <img src="img/pokemon_logo.png" alt="Logo Pokémon" class="logo-img">
     </div>
     <ul class="menu-itens">
-
+  
       <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
-      <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search icon"></i><span class="menu-texto">Pokédex</span></a></li>
-      <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc icon"></i><span class="menu-texto">TMS</span></a></li>
+      <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search fa-4x icon"></i><span class="menu-texto">Pokédex</span></a></li>
+      <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc fa-4x icon"></i><span class="menu-texto">TMS</span></a></li>
       <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question-circle fa-5x icon"></i><span class="menu-texto">Curiosidades</span></a></li>
-      <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
-      <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
-      <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt icon"></i><span class="menu-texto">Mapas</span></a></li>
-      <li class="menu-item"><a href="configuracoes.html" class="menu-link"><i class="fas fa-cog icon"></i><span class="menu-texto">Configurações</span></a></li>
+      <li class="menu-item"><a href="GBA-wasm-master/docs/gba.html" class="menu-link"><i class="fas fa-solid fa-gamepad fa-4x icon"></i><span class="menu-texto">Pokémon Game</span></a></li>
+      <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt fa-4x icon"></i><span class="menu-texto">Mapas</span></a></li>
+      <li class="menu-item"><a href="loguin.html" class="menu-link"><i class="fas fa-solid fa-user icon"></i><span class="menu-texto">Login</span></a></li>
     
     </ul>
   </nav>
@@ -68,4 +67,4 @@
     <script src="js/index.js"></script>
     
 </body>
-</html>
+</html>   
