--- a/tms.html
+++ b/tms.html
@@ -16,14 +16,14 @@
             <img src="img/pokemon_logo.png" alt="Logo Pokémon" class="logo-img">
         </div>
         <ul class="menu-itens">
-            <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
-            <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search icon"></i><span class="menu-texto">Pokédex</span></a></li>
-            <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question-circle fa-5x icon"></i><span class="menu-texto">Curiosidades</span></a></li>
-            <li class="menu-item"><a href="cenas.html" class="menu-link"><i class="fa fa-film icon"></i><span class="menu-texto">Cenas</span></a></li>
-            <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
-            <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
-            <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt icon"></i><span class="menu-texto">Mapas</span></a></li>
-            <li class="menu-item"><a href="configuracoes.html" class="menu-link"><i class="fas fa-cog icon"></i><span class="menu-texto">Configurações</span></a></li>
+      <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
+      <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search fa-4x icon"></i><span class="menu-texto">Pokédex</span></a></li>
+      <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question-circle fa-5x icon"></i><span class="menu-texto">Curiosidades</span></a></li>
+      <li class="menu-item"><a href="cenas.html" class="menu-link"><i class="fa fa-film fa-4x icon"></i><span class="menu-texto">Cenas</span></a></li>
+      <li class="menu-item"><a href="GBA-wasm-master/docs/gba.html" class="menu-link"><i class="fas fa-solid fa-gamepad fa-4x icon"></i><span class="menu-texto">Pokémon Game</span></a></li>
+      <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt fa-4x icon"></i><span class="menu-texto">Mapas</span></a></li>
+      <li class="menu-item"><a href="loguin.html" class="menu-link"><i class="fas fa-solid fa-user icon"></i><span class="menu-texto">Login</span></a></li>
+
         </ul>
     </nav>
 
@@ -34,7 +34,7 @@
             <h1>Evolução das TMs no Mundo Pokémon</h1>
             <p class="subtitulo">Uma jornada tecnológica através das gerações</p>
         </header>
-
+ 
         <section aria-labelledby="intro-tms">
             <h2 id="intro-tms" class="sr-only">Introdução sobre TMs</h2>
             <p>No universo Pokémon, as <strong>TMs (Technical Machines ou Máquinas Técnicas)</strong> representam uma das tecnologias mais fascinantes, permitindo que treinadores ensinem movimentos especiais aos seus Pokémon. Desde a primeira geração, essas ferramentas evoluíram significativamente em design e funcionalidade.</p>
