--- a/curiosidades.html
+++ b/curiosidades.html
@@ -17,12 +17,12 @@
     <ul class="menu-itens">
 
       <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
-      <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search icon"></i><span class="menu-texto">Pokédex</span></a></li>
-      <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc icon"></i><span class="menu-texto">TMS</span></a></li>
+      <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search fa-4x icon"></i><span class="menu-texto">Pokédex</span></a></li>
+      <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc fa-4x icon"></i><span class="menu-texto">TMS</span></a></li>
       <li class="menu-item"><a href="cenas.html" class="menu-link"><i class="fa fa-film fa-4x icon"></i><span class="menu-texto">Cenas</span></a></li>
-      <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
-      <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt icon"></i><span class="menu-texto">Mapas</span></a></li>
-      <li class="menu-item"><a href="configuracoes.html" class="menu-link"><i class="fas fa-cog icon"></i><span class="menu-texto">Configurações</span></a></li>
+      <li class="menu-item"><a href="GBA-wasm-master/docs/gba.html" class="menu-link"><i class="fas fa-solid fa-gamepad fa-4x icon"></i><span class="menu-texto">Pokémon Game</span></a></li>
+      <li class="menu-item"><a href="mapas.html" class="menu-link"><i class="fas fa-map-marked-alt fa-4x icon"></i><span class="menu-texto">Mapas</span></a></li>
+      <li class="menu-item"><a href="loguin.html" class="menu-link"><i class="fas fa-solid fa-user icon"></i><span class="menu-texto">Login</span></a></li>
     
     </ul>
   </nav>
@@ -34,7 +34,7 @@
     <h2>Aqui vai algumas curiosidades dos pokémons mais populares da primeira geração</h2>
     <div class="charizard">
         <img src="img/charizard.jpg" width="400" alt="charizard">
-
+ 
         <ul>
             <li>Tipo: Fogo/Voador (apesar de parecer um dragão, só ganha o tipo Dragão em formas especiais)</li>
             <li>Não obedeceu o Ash no início: No anime, o Charizard do Ash se recusava a obedecer por se achar mais
