--- a/mapas.html
+++ b/mapas.html
@@ -17,13 +17,12 @@
     </div>
     <ul class="menu-itens">
       <li class="menu-item"><a href="index.html" class="menu-link"><i class="fas fa-home icon"></i><span class="menu-texto">Página Inicial</span></a></li>
-      <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search icon"></i><span class="menu-texto">Pokédex</span></a></li>
-      <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc icon"></i><span class="menu-texto">TMS</span></a></li>
+      <li class="menu-item"><a href="pokedex.html" class="menu-link"><i class="fas fa-search fa-4x icon"></i><span class="menu-texto">Pokédex</span></a></li>
+      <li class="menu-item"><a href="tms.html" class="menu-link"><i class="fa-solid fa-compact-disc fa-4x icon"></i><span class="menu-texto">TMS</span></a></li>
       <li class="menu-item"><a href="curiosidades.html" class="menu-link"><i class="fas fa-question-circle fa-5x icon"></i><span class="menu-texto">Curiosidades</span></a></li>
       <li class="menu-item"><a href="cenas.html" class="menu-link"><i class="fa fa-film fa-4x icon"></i><span class="menu-texto">Cenas</span></a></li>
-      <li class="menu-item"><a href="itens.html" class="menu-link"><i class="fas fa-shopping-bag icon"></i><span class="menu-texto">Itens</span></a></li>
-      <li class="menu-item"><a href="batalhas.html" class="menu-link"><i class="fas fa-trophy icon"></i><span class="menu-texto">Batalhas</span></a></li>
-      <li class="menu-item"><a href="configuracoes.html" class="menu-link"><i class="fas fa-cog icon"></i><span class="menu-texto">Configurações</span></a></li>
+      <li class="menu-item"><a href="GBA-wasm-master/docs/gba.html" class="menu-link"><i class="fas fa-solid fa-gamepad fa-4x icon"></i><span class="menu-texto">Pokémon Game</span></a></li>
+      <li class="menu-item"><a href="loguin.html" class="menu-link"><i class="fas fa-solid fa-user icon"></i><span class="menu-texto">Login</span></a></li>
     </ul>
   </nav>
 
@@ -36,7 +35,7 @@
     <p style="text-align: center; max-width: 800px; margin: 0 auto;">Desde as clássicas rotas de Kanto até as ilhas paradisíacas de Alola, cada região oferece uma experiência única com suas paisagens distintas, culturas locais e espécies Pokémon exclusivas.</p>
     <br><br>
   </header>
-
+ 
   <section aria-label="Regiões Pokémon">
     <article class="regiao">
       <h3>Kanto (Geração I)</h3>
